--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="intro_title_3">Title 3</string>
     <string name="intro_description_1">Login to your account!</string>
     <string name="intro_description_2">Let\'s build connection with new people.</string>
-    <string name="intro_description_3">Connect helps you locate the people around you whoConnect helps you locate the people around your home.</string>
+    <string name="intro_description_3">Connect helps you locate the people around you.</string>
     <string name="intro_skip">SKIP</string>
     <string name="menu_view_pager2">View Pager2</string>
     <string name="tab1">Tab 1</string>
